crates/eure-macros/tests/compile_fail/ext_and_flatten_ext_conflict.rs
use eure::FromEure;

#[derive(FromEure)]
struct Test {
    #[eure(ext, flatten_ext)]
    field: String,
}

fn main() {}
